# perfwatch

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  SCREENSHOTS.md  docker-compose.offline.yml  docker-compose.yml  stress-test.sh
.github/workflows/: docker-multiarch.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  config.py  constants.py  database.py  init_db.py  main.py
backend/app/api/: auth.py  config.py  deps.py  history.py  retention.py  websocket.py
backend/app/collectors/: __init__.py  aggregator.py  base.py  cpu.py  disk.py  memory.py  memory_bandwidth.py  network.py  perf_events.py
backend/app/models/: __init__.py  archive.py  config.py  metrics.py  user.py
backend/app/schemas/: auth.py  config.py  metrics.py  retention.py  user.py
backend/app/services/: auth.py  config.py  metrics_aggregation.py  metrics_storage.py  retention.py
backend/app/utils/: rate_calculator.py  validators.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_collectors.py  test_config.py  test_cpu_collector.py  test_database.py  test_disk_collector.py  test_history.py  test_init_db.py  test_memory_bandwidth.py  test_memory_collector.py  test_models.py  test_network_collector.py  test_perf_events.py  test_retention.py  test_websocket.py
docs/: DEPLOYMENT.md
docs/diagrams/: README.md
docs/diagrams/architects/: README.md  c4-component.md  c4-container.md  tech-stack.md  (+1 more)
docs/screenshots/: README.md  placeholder.md
docs/sdd/: CURRENT_TASK.md  PROGRESS.md  README.md  RESUME_CONTEXT.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
(+64 files in other folders)
